--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "ga_tud",
   "version": "1.0.0",
+  "private": true,
   "description": "A Vue.js project",
   "author": "Argann BAY-EYMERE <argann.bay-eymere@epitech.eu>",
-  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev"
   },
   "dependencies": {
+    "@mdi/js": "^5.8.55",
     "sass-loader": "^10.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.3.18"
+    "vuetify": "^2.3.18",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-vuex": "^4.5.9",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -65,13 +68,13 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  }
 }
